Bug 588048 - test_viewWrapper_virtualFolder.js intermittently hangs on Linux; r=bienvenu a=Standard8 for landing into CLOSED TREE to test the effect on frequent-oranges to see if it helps stabilise the tree.